add fit and learning curve Add fit method using the learning curve object from sklearn. The fit method loops over all estimators and returns a dictionary of scoring results.

--- a/machine_learning_pipelining/pipelining.ipynb
+++ b/machine_learning_pipelining/pipelining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from IPython.display import display, clear_output\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -911,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,20 +920,23 @@
     "    def __init__(self, estimators, scorer, train_sizes = None, cv = None):\n",
     "        self.estimators = estimators\n",
     "        self.scorer = scorer\n",
-    "        self.train_sizes = train_sizes\n",
+    "        self.train_sizes = np.linspace(0.1, 1.0, 5) if not train_sizes else train_sizes\n",
     "        self.cv = cv\n",
     "        self.scores = {}\n",
     "    \n",
     "    def fit(self, X, y):\n",
     "        for estimator_name in self.estimators.keys():\n",
-    "            train_sizes, train_scores, test_scores = learning_curve(self.estimators[estimator_name], \n",
-    "                                                                    #train_sizes,\n",
-    "                                                                    #cv,\n",
-    "                                                                    #scoring,\n",
-    "                                                                    X, y)\n",
-    "            self.scores[estimator_name] = dict([('sizes', train_sizes),\n",
-    "                                                ('train_scores', train_scores),\n",
-    "                                                ('test_scores', test_scores)])\n",
+    "            train_sizes, train_scores, test_scores = learning_curve(self.estimators[estimator_name],\n",
+    "                                                                    X, y,\n",
+    "                                                                    scoring = self.scorer,\n",
+    "                                                                    cv = self.cv,\n",
+    "                                                                    train_sizes = self.train_sizes)\n",
+    "            self.scores[estimator_name] = dict([('train', dict(zip(train_sizes, train_scores))),\n",
+    "                                                ('test', dict(zip(train_sizes, test_scores)))])\n",
+    "        self.train_sizes_res = train_sizes\n",
+    "        \n",
+    "        return self\n",
+    "    \n",
     "    def score(self, X, y_true):\n",
     "        pass\n",
     "    \n",
@@ -955,12 +959,24 @@
     "        pass\n",
     "    \n",
     "    def set_best_model(model_name):\n",
-    "        pass"
+    "        pass\n",
+    "    \n",
+    "    def get_score_dataframe(self):\n",
+    "        self.scores_frame = pd.DataFrame(columns = ['estimator', 'type', 'size', 'cv_fit', 'score'])\n",
+    "        for estimator in self.scores.keys():\n",
+    "            for score_type in self.scores[estimator].keys():\n",
+    "                for size in self.scores[estimator][score_type].keys():\n",
+    "                    for cv_fit, score in enumerate(self.scores[estimator][score_type][size].tolist()):\n",
+    "                        to_append = pd.DataFrame([[estimator, score_type, size, cv_fit, score]],\n",
+    "                                                 columns = scores.columns)\n",
+    "                        self.scores_frame = self.scores_frame.append(to_append, ignore_index = True)\n",
+    "        \n",
+    "        return self.scores_frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,64 +985,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_explorer = MultiEstimator(models, 'f1')\n",
-    "model_explorer.fit(X_train, y_train)"
+    "model_explorer = MultiEstimator(models, 'f1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>estimator</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>cv_fit</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>naive_bayes</td>\n",
+       "      <td>train</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>naive_bayes</td>\n",
+       "      <td>train</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.972973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>naive_bayes</td>\n",
+       "      <td>train</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.972973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>naive_bayes</td>\n",
+       "      <td>train</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.991870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>naive_bayes</td>\n",
+       "      <td>train</td>\n",
+       "      <td>86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.957983</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'naive_bayes': {'sizes': array([ 26,  86, 145, 205, 265]),\n",
-       "  'train_scores': array([[1.        , 0.96153846, 0.96153846],\n",
-       "         [0.98837209, 0.94186047, 0.94186047],\n",
-       "         [0.95172414, 0.95172414, 0.94482759],\n",
-       "         [0.95121951, 0.95121951, 0.96097561],\n",
-       "         [0.93207547, 0.93584906, 0.9509434 ]]),\n",
-       "  'test_scores': array([[0.81954887, 0.93984962, 0.93181818],\n",
-       "         [0.90977444, 0.91729323, 0.93939394],\n",
-       "         [0.93984962, 0.93984962, 0.93939394],\n",
-       "         [0.93984962, 0.92481203, 0.93181818],\n",
-       "         [0.94736842, 0.91729323, 0.93181818]])},\n",
-       " 'log_reg': {'sizes': array([ 26,  86, 145, 205, 265]),\n",
-       "  'train_scores': array([[1.        , 1.        , 1.        ],\n",
-       "         [1.        , 0.95348837, 0.95348837],\n",
-       "         [0.96551724, 0.94482759, 0.94482759],\n",
-       "         [0.96097561, 0.95121951, 0.95609756],\n",
-       "         [0.95849057, 0.94716981, 0.95849057]]),\n",
-       "  'test_scores': array([[0.81954887, 0.90977444, 0.90909091],\n",
-       "         [0.87969925, 0.94736842, 0.92424242],\n",
-       "         [0.93233083, 0.95488722, 0.90151515],\n",
-       "         [0.92481203, 0.96992481, 0.91666667],\n",
-       "         [0.93233083, 0.97744361, 0.93181818]])},\n",
-       " 'tree': {'sizes': array([ 26,  86, 145, 205, 265]),\n",
-       "  'train_scores': array([[1., 1., 1.],\n",
-       "         [1., 1., 1.],\n",
-       "         [1., 1., 1.],\n",
-       "         [1., 1., 1.],\n",
-       "         [1., 1., 1.]]),\n",
-       "  'test_scores': array([[0.83458647, 0.92481203, 0.87878788],\n",
-       "         [0.89473684, 0.89473684, 0.93181818],\n",
-       "         [0.93233083, 0.87218045, 0.93181818],\n",
-       "         [0.89473684, 0.89473684, 0.93939394],\n",
-       "         [0.93984962, 0.91729323, 0.92424242]])}}"
+       "     estimator   type size cv_fit     score\n",
+       "0  naive_bayes  train   26      0  1.000000\n",
+       "1  naive_bayes  train   26      1  0.972973\n",
+       "2  naive_bayes  train   26      2  0.972973\n",
+       "3  naive_bayes  train   86      0  0.991870\n",
+       "4  naive_bayes  train   86      1  0.957983"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 453,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_explorer.scores"
+    "model_explorer.fit(X_train, y_train).get_score_dataframe().head()"
    ]
   },
   {
