--- a/machine_learning_pipelining/pipelining.ipynb
+++ b/machine_learning_pipelining/pipelining.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,6 +933,9 @@
     "                                                                    train_sizes = self.train_sizes)\n",
     "            self.scores[estimator_name] = dict([('train', dict(zip(train_sizes, train_scores))),\n",
     "                                                ('test', dict(zip(train_sizes, test_scores)))])\n",
+    "            \n",
+    "            self.estimators[estimator_name].fit(X, y)\n",
+    "        \n",
     "        self.train_sizes_res = train_sizes\n",
     "        \n",
     "        return self\n",
@@ -976,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [
     {
@@ -1079,13 +1082,33 @@
        "4  naive_bayes  train   86      1  0.957983"
       ]
      },
-     "execution_count": 453,
+     "execution_count": 464,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model_explorer.fit(X_train, y_train).get_score_dataframe().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9415204678362573"
+      ]
+     },
+     "execution_count": 466,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_explorer.estimators['naive_bayes'].score(X_test, y_test)"
    ]
   },
   {
