add get best estimator method

--- a/machine_learning_pipelining/pipelining.ipynb
+++ b/machine_learning_pipelining/pipelining.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,6 +923,8 @@
     "        self.train_sizes = np.linspace(0.1, 1.0, 5) if not train_sizes else train_sizes\n",
     "        self.cv = cv\n",
     "        self.scores = {}\n",
+    "        self.best_estimator = None\n",
+    "        self.scores_frame = None\n",
     "    \n",
     "    def fit(self, X, y):\n",
     "        for estimator_name in self.estimators.keys():\n",
@@ -937,32 +939,56 @@
     "            self.estimators[estimator_name].fit(X, y)\n",
     "        \n",
     "        self.train_sizes_res = train_sizes\n",
+    "        self.get_score_dataframe()\n",
+    "        self.get_best_model()\n",
     "        \n",
     "        return self\n",
     "    \n",
     "    def score(self, X, y_true):\n",
+    "        self.best_estimator.score(X, y_true)\n",
+    "        \n",
+    "        return self\n",
+    "    \n",
+    "    def predict(self, X):\n",
     "        pass\n",
     "    \n",
-    "    def predict(X):\n",
+    "    def predict_log_proba(self, X):\n",
     "        pass\n",
     "    \n",
-    "    def predict_log_proba(X):\n",
-    "        pass\n",
-    "    \n",
-    "    def predict_proba(X):\n",
+    "    def predict_proba(self, X):\n",
     "        pass\n",
     "    \n",
     "    def draw_learning_curves():\n",
     "        pass\n",
     "    \n",
-    "    def get_scoring_report():\n",
-    "        pass\n",
+    "    def get_scoring_report(self):\n",
+    "        report = pd.pivot_table(data = self.scores_frame,\n",
+    "                                index = 'size',\n",
+    "                                columns = ['estimator', 'type'],\n",
+    "                                values = 'score',\n",
+    "                                aggfunc = 'mean')\n",
+    "        \n",
+    "        return report\n",
     "    \n",
     "    def perform_grid_search(parameter_grid):\n",
     "        pass\n",
     "    \n",
-    "    def set_best_model(model_name):\n",
-    "        pass\n",
+    "    def get_best_model(self):\n",
+    "        estimator_scores = self.scores_frame[self.scores_frame['size'] ==\\\n",
+    "                                             self.scores_frame['size'].max()]\\\n",
+    "        [['estimator', 'score']].groupby(by = 'estimator').mean()\n",
+    "        \n",
+    "        estimator_name = estimator_scores[estimator_scores['score'] ==\\\n",
+    "                                          estimator_scores['score'].max()].index[0]\n",
+    "        \n",
+    "        self.best_estimator = self.estimators[estimator_name]\n",
+    "        \n",
+    "        return self\n",
+    "    \n",
+    "    def set_best_model(self, estimator_name):\n",
+    "        self.best_estimator = self.estimators[estimator_name]\n",
+    "        \n",
+    "        return self\n",
     "    \n",
     "    def get_score_dataframe(self):\n",
     "        self.scores_frame = pd.DataFrame(columns = ['estimator', 'type', 'size', 'cv_fit', 'score'])\n",
@@ -974,12 +1000,12 @@
     "                                                 columns = scores.columns)\n",
     "                        self.scores_frame = self.scores_frame.append(to_append, ignore_index = True)\n",
     "        \n",
-    "        return self.scores_frame"
+    "        return self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1023,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 533,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.MultiEstimator at 0x2817c9b2eb8>"
+      ]
+     },
+     "execution_count": 533,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_explorer.fit(X_train, y_train).get_score_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 534,
    "metadata": {},
    "outputs": [
     {
@@ -1082,33 +1128,201 @@
        "4  naive_bayes  train   86      1  0.957983"
       ]
      },
-     "execution_count": 464,
+     "execution_count": 534,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_explorer.fit(X_train, y_train).get_score_dataframe().head()"
+    "model_explorer.scores_frame.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9415204678362573"
+       "'94.15%'"
       ]
      },
-     "execution_count": 466,
+     "execution_count": 542,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_explorer.estimators['naive_bayes'].score(X_test, y_test)"
+    "'{:.2%}'.format(model_explorer.estimators['naive_bayes'].score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>estimator</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">log_reg</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">naive_bayes</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">tree</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type</th>\n",
+       "      <th>test</th>\n",
+       "      <th>train</th>\n",
+       "      <th>test</th>\n",
+       "      <th>train</th>\n",
+       "      <th>test</th>\n",
+       "      <th>train</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>0.911912</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.924665</td>\n",
+       "      <td>0.981982</td>\n",
+       "      <td>0.906588</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>0.937012</td>\n",
+       "      <td>0.977401</td>\n",
+       "      <td>0.939103</td>\n",
+       "      <td>0.969279</td>\n",
+       "      <td>0.925245</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>0.945436</td>\n",
+       "      <td>0.964008</td>\n",
+       "      <td>0.952568</td>\n",
+       "      <td>0.962334</td>\n",
+       "      <td>0.927892</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>0.950780</td>\n",
+       "      <td>0.965245</td>\n",
+       "      <td>0.946706</td>\n",
+       "      <td>0.964208</td>\n",
+       "      <td>0.931691</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>0.958296</td>\n",
+       "      <td>0.964137</td>\n",
+       "      <td>0.946262</td>\n",
+       "      <td>0.952755</td>\n",
+       "      <td>0.927809</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "estimator   log_reg           naive_bayes                tree      \n",
+       "type           test     train        test     train      test train\n",
+       "size                                                               \n",
+       "26         0.911912  1.000000    0.924665  0.981982  0.906588   1.0\n",
+       "86         0.937012  0.977401    0.939103  0.969279  0.925245   1.0\n",
+       "145        0.945436  0.964008    0.952568  0.962334  0.927892   1.0\n",
+       "205        0.950780  0.965245    0.946706  0.964208  0.931691   1.0\n",
+       "265        0.958296  0.964137    0.946262  0.952755  0.927809   1.0"
+      ]
+     },
+     "execution_count": 536,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_explorer.get_scoring_report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 541,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'94.15%'"
+      ]
+     },
+     "execution_count": 541,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{:.2%}'.format(model_explorer.best_estimator.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 543,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
+      ]
+     },
+     "execution_count": 543,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_explorer.best_estimator"
    ]
   },
   {
