add finn property size price tag

--- a/machine_learning_pipelining/pipelining.ipynb
+++ b/machine_learning_pipelining/pipelining.ipynb
@@ -1032,7 +1032,7 @@
     "                for size in self.scores[estimator][score_type].keys():\n",
     "                    for cv_fit, score in enumerate(self.scores[estimator][score_type][size].tolist()):\n",
     "                        to_append = pd.DataFrame([[estimator, score_type, size, cv_fit, score]],\n",
-    "                                                 columns = scores.columns)\n",
+    "                                                 columns = self.scores_frame.columns)\n",
     "                        self.scores_frame = self.scores_frame.append(to_append, ignore_index = True)\n",
     "        \n",
     "        return self"
