--- a/finn_no_property/finn_no_property.ipynb
+++ b/finn_no_property/finn_no_property.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "import urllib3\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import json\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment"
    ]
   },
   {
@@ -41,308 +50,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "size_price = soup.find('p', attrs={'class' : 'ads__unit__content__keys'})"
+    "ads = soup.findAll('div', {'class': 'ads__unit__content'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['HTML_FORMATTERS',\n",
-       " 'XML_FORMATTERS',\n",
-       " '__bool__',\n",
-       " '__call__',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__copy__',\n",
-       " '__delattr__',\n",
-       " '__delitem__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattr__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setitem__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__unicode__',\n",
-       " '__weakref__',\n",
-       " '_all_strings',\n",
-       " '_attr_value_as_string',\n",
-       " '_attribute_checker',\n",
-       " '_find_all',\n",
-       " '_find_one',\n",
-       " '_formatter_for_name',\n",
-       " '_is_xml',\n",
-       " '_lastRecursiveChild',\n",
-       " '_last_descendant',\n",
-       " '_select_debug',\n",
-       " '_selector_combinators',\n",
-       " '_should_pretty_print',\n",
-       " '_tag_name_matches_and',\n",
-       " 'append',\n",
-       " 'attribselect_re',\n",
-       " 'attrs',\n",
-       " 'can_be_empty_element',\n",
-       " 'childGenerator',\n",
-       " 'children',\n",
-       " 'clear',\n",
-       " 'contents',\n",
-       " 'decode',\n",
-       " 'decode_contents',\n",
-       " 'decompose',\n",
-       " 'descendants',\n",
-       " 'encode',\n",
-       " 'encode_contents',\n",
-       " 'extract',\n",
-       " 'fetchNextSiblings',\n",
-       " 'fetchParents',\n",
-       " 'fetchPrevious',\n",
-       " 'fetchPreviousSiblings',\n",
-       " 'find',\n",
-       " 'findAll',\n",
-       " 'findAllNext',\n",
-       " 'findAllPrevious',\n",
-       " 'findChild',\n",
-       " 'findChildren',\n",
-       " 'findNext',\n",
-       " 'findNextSibling',\n",
-       " 'findNextSiblings',\n",
-       " 'findParent',\n",
-       " 'findParents',\n",
-       " 'findPrevious',\n",
-       " 'findPreviousSibling',\n",
-       " 'findPreviousSiblings',\n",
-       " 'find_all',\n",
-       " 'find_all_next',\n",
-       " 'find_all_previous',\n",
-       " 'find_next',\n",
-       " 'find_next_sibling',\n",
-       " 'find_next_siblings',\n",
-       " 'find_parent',\n",
-       " 'find_parents',\n",
-       " 'find_previous',\n",
-       " 'find_previous_sibling',\n",
-       " 'find_previous_siblings',\n",
-       " 'format_string',\n",
-       " 'get',\n",
-       " 'getText',\n",
-       " 'get_attribute_list',\n",
-       " 'get_text',\n",
-       " 'has_attr',\n",
-       " 'has_key',\n",
-       " 'hidden',\n",
-       " 'index',\n",
-       " 'insert',\n",
-       " 'insert_after',\n",
-       " 'insert_before',\n",
-       " 'isSelfClosing',\n",
-       " 'is_empty_element',\n",
-       " 'known_xml',\n",
-       " 'name',\n",
-       " 'namespace',\n",
-       " 'next',\n",
-       " 'nextGenerator',\n",
-       " 'nextSibling',\n",
-       " 'nextSiblingGenerator',\n",
-       " 'next_element',\n",
-       " 'next_elements',\n",
-       " 'next_sibling',\n",
-       " 'next_siblings',\n",
-       " 'parent',\n",
-       " 'parentGenerator',\n",
-       " 'parents',\n",
-       " 'parserClass',\n",
-       " 'parser_class',\n",
-       " 'prefix',\n",
-       " 'preserve_whitespace_tags',\n",
-       " 'prettify',\n",
-       " 'previous',\n",
-       " 'previousGenerator',\n",
-       " 'previousSibling',\n",
-       " 'previousSiblingGenerator',\n",
-       " 'previous_element',\n",
-       " 'previous_elements',\n",
-       " 'previous_sibling',\n",
-       " 'previous_siblings',\n",
-       " 'quoted_colon',\n",
-       " 'recursiveChildGenerator',\n",
-       " 'renderContents',\n",
-       " 'replaceWith',\n",
-       " 'replaceWithChildren',\n",
-       " 'replace_with',\n",
-       " 'replace_with_children',\n",
-       " 'select',\n",
-       " 'select_one',\n",
-       " 'setup',\n",
-       " 'string',\n",
-       " 'strings',\n",
-       " 'stripped_strings',\n",
-       " 'tag_name_re',\n",
-       " 'text',\n",
-       " 'unwrap',\n",
-       " 'wrap']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(size_price)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<p class=\"ads__unit__content__keys\">\n",
-       "<span>51 m²</span>\n",
-       "<span>3 500 000 kr</span>\n",
-       "</p>"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size_price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'class': ['ads__unit__content__keys']}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size_price.attrs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ads__unit__content__keys']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size_price['class']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<generator object Tag._all_strings at 0x00000291A94C0C78>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size_price.strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "digist = '0123456789'\n",
-    "size_prices = {'size' : [], 'price' : []}\n",
-    "for string in size_price.strings:\n",
-    "    tokens = string.split()\n",
-    "    if tokens:\n",
-    "        price_string = ''\n",
-    "        if 'm²' in tokens:\n",
-    "            size_prices['size'].append(int(tokens[0]))\n",
-    "        else:\n",
-    "            for _t in tokens:\n",
-    "                if _t != 'kr':\n",
-    "                    price_string += _t\n",
-    "            size_prices['price'].append(int(price_string))"
+    "def get_int_from_tag(tag):\n",
+    "    return int(''.join(re.findall(r'\\d', tag.string)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'size': [51], 'price': [3500000]}"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48 3590000\n",
+      "83 3950000\n",
+      "58 4150000\n",
+      "186 7000000\n",
+      "54 3900000\n"
+     ]
     }
    ],
    "source": [
-    "size_prices"
+    "for _ad in ads[:5]:\n",
+    "    size, price = _ad.find('p', {'class' : 'ads__unit__content__keys'}).find_all('span')\n",
+    "    print(get_int_from_tag(size), get_int_from_tag(price))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Prototype"
    ]
   },
   {
