write regex for isolating the ad id

--- a/finn_no_property/finn_no_property.ipynb
+++ b/finn_no_property/finn_no_property.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Experiment"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
-    "property_page = 'https://www.finn.no/realestate/homes/search.html?location=0.20061'"
+    "property_page = 'https://www.finn.no/realestate/homes/search.html?location=0.20061&page=0'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,32 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48 3590000\n",
-      "83 3950000\n",
-      "58 4150000\n",
-      "186 7000000\n",
-      "54 3900000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for _ad in ads[:5]:\n",
     "    size, price = _ad.find('p', {'class' : 'ads__unit__content__keys'}).find_all('span')\n",
-    "    print(get_int_from_tag(size), get_int_from_tag(price))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# First Prototype"
+    "    address = _ad.find('span', {'class' : 'ads__unit__content__details'}).find('span').string\n",
+    "    ad_details = [_s.string for _s in _ad.find('span', {'class' : 'u-float-left'}).find_all('span')]\n",
+    "    ad_description = _ad.find('a').string.strip()\n",
+    "    ad_id = int(re.search(r'(.+)(data-finnkode=\")(\\d+)', ad_link, re.I)[3])"
    ]
   },
   {
