--- a/basic_nlp/nlp_demo.ipynb
+++ b/basic_nlp/nlp_demo.ipynb
@@ -4,86 +4,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What Is NLP?"
+    "# What Is NLP?\n",
+    "Natural Language Processing (NLP) is a set of methods for extracting information from text. But is text not already data and what would we extract? It is data, however it is represented as a continuous string of text like the one you are reading right now. The issue here is that statistics use numbers as input. So how do we make numbers out of text? Usually we break down the text into words. We can then one-hot encode the words and build a binary matrix. The columns of the matrix are the tokens, while the rows are the texts. We can then use the binary matrix as input to a range of numeric functions.\n",
+    "\n",
+    "# Tokenization\n",
+    "Let us download a dataset of news articles from 20 news groups."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = ['Natural Language Processing (NLP) is a set of methods for extracting information from text.',\n",
-    "          'But is text not already data and what would we extract?',\n",
-    "          'It is data, however it is represented as a continuous string of text like'\n",
-    "          'the one you are reading right now.',\n",
-    "          'The issue here is that statistics use numbers as input.',\n",
-    "          'So how do we make numbers out of text?',\n",
-    "          'Usually we break down the text into words.',\n",
-    "          'We can then one-hot encode the words and build a binary matrix.',\n",
-    "          'The columns of the matrix are the tokens, while the rows are the texts.',\n",
-    "          'We can then use the binary matrix as input to a range of numeric functions.']"
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "news = fetch_20newsgroups(subset='all')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tokenization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The most basic form of tokenization is splitting by whitespace:"
+    "We can select a single news article and print its contents:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From: Mamatha Devineni Ratnam <mr47+@andrew.cmu.edu>\n",
+      "Subject: Pens fans reactions\n",
+      "Organization: Post Office, Carnegie Mellon, Pittsburgh, PA\n",
+      "Lines: 12\n",
+      "NNTP-Posting-Host: po4.andrew.cmu.edu\n",
+      "\n",
+      "\n",
+      "\n",
+      "I am sure some bashers of Pens fans are pretty confused about the lack\n",
+      "of any kind of posts about the recent Pens massacre of the Devils. Actually,\n",
+      "I am  bit puzzled too and a bit relieved. However, I am going to put an end\n",
+      "to non-PIttsburghers' relief with a bit of praise for the Pens. Man, they\n",
+      "are killing those Devils worse than I thought. Jagr just showed you why\n",
+      "he is much better than his regular season stats. He is also a lot\n",
+      "fo fun to watch in the playoffs. Bowman should let JAgr have a lot of\n",
+      "fun in the next couple of games since the Pens are going to beat the pulp out of Jersey anyway. I was very disappointed not to see the Islanders lose the final\n",
+      "regular season game.          PENS RULE!!!\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(news.data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Natural',\n",
-       " 'Language',\n",
-       " 'Processing',\n",
-       " '(NLP)',\n",
-       " 'is',\n",
-       " 'a',\n",
-       " 'set',\n",
-       " 'of',\n",
-       " 'methods',\n",
-       " 'for',\n",
-       " 'extracting',\n",
-       " 'information',\n",
-       " 'from',\n",
-       " 'text.']"
+       "'\\nregular season game.          PENS RULE!!!\\n\\n'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
-    "sample[0].split()"
+    "news.data[0][-45:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['regular', 'season', 'game.', 'PENS', 'RULE!!!']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news.data[0].split()[-5:]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, note that the `(NLP)` token also includes the parentheses. Also, the `text.` token includes the punctuation at the end. We could turn to another basic method for splitting text - regular expressions:"
+    "However, note that the `game.` token also includes the punctuation at the end. The `RULE!!!` token is capitalized and includes the punctuation. Capitalization carries its own set of probles as it can make several distinct tokens out of the same sema. We could turn to another basic method for splitting text - regular expressions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,43 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['natural',\n",
-       " 'language',\n",
-       " 'processing',\n",
-       " 'nlp',\n",
-       " 'is',\n",
-       " 'a',\n",
-       " 'set',\n",
-       " 'of',\n",
-       " 'methods',\n",
-       " 'for',\n",
-       " 'extracting',\n",
-       " 'information',\n",
-       " 'from',\n",
-       " 'text']"
+       "['regular', 'season', 'game', 'pens', 'rule']"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "punct_whitesp = re.compile(r'\\s|[\\.\\(\\)\\?]')\n",
-    "tokenize_regex(punct_whitesp, sample[0])"
+    "punct_whitesp = re.compile(r'\\s|[\\.\\(\\)\\?\\!]+')\n",
+    "tokenize_regex(punct_whitesp, news.data[0])[-5:]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That looks even better. Note that we also made all tokens in lowercase such that `Natural` will match with `natural`. However, in reality, texts are rarely so clean. They contain:\n",
+    "That looks even better. Note that we also made all tokens in lowercase such that `RULE` will match with `rule`. However, in reality, texts are rarely so clean. They contain:\n",
     "\n",
     "* Special characters;\n",
     "* Random new lines, tabs or other whitespace characters;\n",
@@ -137,59 +162,15 @@
     "* Foreign words;\n",
     "* Tpyos;\n",
     "\n",
-    "Here is one example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nltk\n",
-    "path = nltk.data.find('corpora/unicode_samples/polish-lat2.txt')\n",
-    "with open(path, 'r', encoding='latin2') as file:\n",
-    "    unicode_sample = file.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'Pruska Biblioteka Pa\\\\u0144stwowa. Jej dawne zbiory znane pod nazw\\\\u0105\\\\n\"Berlinka\" to skarb kultury i sztuki niemieckiej. Przewiezione przez\\\\nNiemc\\\\xf3w pod koniec II wojny \\\\u015bwiatowej na Dolny \\\\u015al\\\\u0105sk, zosta\\\\u0142y\\\\nodnalezione po 1945 r. na terytorium Polski. Trafi\\\\u0142y do Biblioteki\\\\nJagiello\\\\u0144skiej w Krakowie, obejmuj\\\\u0105 ponad 500 tys. zabytkowych\\\\narchiwali\\\\xf3w, m.in. manuskrypty Goethego, Mozarta, Beethovena, Bacha.\\\\n'\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(unicode_sample.encode('unicode_escape'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's why an extensive work must be performed to clean the text and tokenize it. The tokenization methods may also differ depending on the subject matter, the types of texts and the qunatity of documents. Sometimes this task constitutes the bulk of the work (the actual modelling being just the 'cherry on the top' of that linguistic Sunday\n",
-    "desert).\n",
+    "That's why an extensive work must be performed to clean the text and tokenize it. The tokenization methods may also differ depending on the subject matter, the types of texts and the qunatity of documents. Sometimes this task constitutes the bulk of the NLP work.\n",
     "\n",
-    "Once, we have performed tokenization, we can further optimize our array of tokes. Here is how:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Stemming\n",
-    "look at the following tokens: `go`, `going`. They represent different strings, but have the same meaning. What can we do about this?\n"
+    "look at the following tokens: `go`, `going`. They represent different strings, but have the same meaning. What can we do about this?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -211,69 +192,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this technique for text normalization if we want to focus on the meaning rather than the morphology of the text.\n",
-    "\n",
-    "Let's go back to our initial sample text:"
+    "We can use this technique for text normalization if we want to focus on the meaning rather than the morphology of the text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stem_example = [tokenize_regex(punct_whitesp, sent) for sent in sample[:2]]"
+    "from nltk import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens_news_0 = [token.lower() for token in word_tokenize(news.data[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['natural',\n",
-       "  'language',\n",
-       "  'processing',\n",
-       "  'nlp',\n",
-       "  'is',\n",
-       "  'a',\n",
-       "  'set',\n",
-       "  'of',\n",
-       "  'methods',\n",
-       "  'for',\n",
-       "  'extracting',\n",
-       "  'information',\n",
-       "  'from',\n",
-       "  'text'],\n",
-       " ['but',\n",
-       "  'is',\n",
-       "  'text',\n",
-       "  'not',\n",
-       "  'already',\n",
-       "  'data',\n",
-       "  'and',\n",
-       "  'what',\n",
-       "  'would',\n",
-       "  'we',\n",
-       "  'extract']]"
+       "184"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stem_example"
+    "len(tokens_news_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(tokens_news_0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens_news_0_stemmed = [porter.stem(token) for token in tokens_news_0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(tokens_news_0_stemmed))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we start using the industry-standard libraries, we can vectorize the tokenized sentences like so:"
+    "For a small article of 184 tokens (including the punctuation), we managed to reduce the total number of unique tokens from 115 to 113 using stemming. The usefullness of the stemming technique is proportional to the text size and the morphological complexity.\n",
+    "\n",
+    "# One-Hot Encoding\n",
+    "We can take our news dataset and build a matrix. The rows of the matrix will represent the various news articles, while the columns will represent a one-hot encoding of all the tokens for all news articles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alt.atheism',\n",
+       " 'comp.graphics',\n",
+       " 'comp.os.ms-windows.misc',\n",
+       " 'comp.sys.ibm.pc.hardware',\n",
+       " 'comp.sys.mac.hardware',\n",
+       " 'comp.windows.x',\n",
+       " 'misc.forsale',\n",
+       " 'rec.autos',\n",
+       " 'rec.motorcycles',\n",
+       " 'rec.sport.baseball',\n",
+       " 'rec.sport.hockey',\n",
+       " 'sci.crypt',\n",
+       " 'sci.electronics',\n",
+       " 'sci.med',\n",
+       " 'sci.space',\n",
+       " 'soc.religion.christian',\n",
+       " 'talk.politics.guns',\n",
+       " 'talk.politics.mideast',\n",
+       " 'talk.politics.misc',\n",
+       " 'talk.religion.misc']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news.target_names"
    ]
   },
   {
