add k-means clustering from tfidf vectorized texts

--- a/basic_nlp/nlp_demo.ipynb
+++ b/basic_nlp/nlp_demo.ipynb
@@ -330,29 +330,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfTransformer"
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.preprocessing import Normalizer\n",
+    "from sklearn.decomposition import TruncatedSVD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf_transformer = TfidfTransformer()"
+    "# tfidf_transformer = TfidfTransformer()\n",
+    "tfidf_transformer = TfidfVectorizer(# ngram_range=(1, 2),\n",
+    "                                    token_pattern = r'[A-z]+',\n",
+    "                                    # strip_accents='ascii',\n",
+    "                                    # lowercase=True,\n",
+    "                                    stop_words='english',\n",
+    "                                    # max_features=int(1e4),\n",
+    "                                    # max_df=0.7,\n",
+    "                                    min_df=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf = tfidf_transformer.fit_transform(vectorized_text)"
+    "# tfidf = tfidf_transformer.fit_transform(vectorized_text)\n",
+    "tfidf = tfidf_transformer.fit_transform(news.data)"
    ]
   },
   {
@@ -364,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,10 +385,10 @@
     "\n",
     "top_n = 3\n",
     "\n",
-    "for i, line in enumerate(news.data[:top_n]):\n",
+    "for i, line in enumerate(news.data[:5]):\n",
     "    tfidf_result['doc'].append(line)\n",
     "    for j in range(top_n):\n",
-    "        feature_names = count_vectorizer.get_feature_names()\n",
+    "        feature_names = tfidf_transformer.get_feature_names()\n",
     "        term_df = test_df = pd.DataFrame(tfidf.getrow(i).todense(),\n",
     "                                         columns=feature_names)\n",
     "        term = term_df.loc[0].sort_values(ascending=False).reset_index()\n",
@@ -386,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [
     {
@@ -434,21 +446,41 @@
        "      <th>1</th>\n",
        "      <td>My brother is in the market for a high-perform...</td>\n",
        "      <td>pro</td>\n",
-       "      <td>0.293923</td>\n",
+       "      <td>0.306293</td>\n",
        "      <td>bus</td>\n",
-       "      <td>0.289536</td>\n",
-       "      <td>farenheit</td>\n",
-       "      <td>0.281321</td>\n",
+       "      <td>0.301722</td>\n",
+       "      <td>performance</td>\n",
+       "      <td>0.291752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>\\n\\n\\n\\n\\tFinally you said what you dream abou...</td>\n",
        "      <td>azerbadjan</td>\n",
-       "      <td>0.355673</td>\n",
+       "      <td>0.368957</td>\n",
        "      <td>weapons</td>\n",
-       "      <td>0.279686</td>\n",
+       "      <td>0.290132</td>\n",
        "      <td>armenians</td>\n",
-       "      <td>0.231632</td>\n",
+       "      <td>0.240284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\\nThink!\\n\\nIt's the SCSI card doing the DMA t...</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>0.411414</td>\n",
+       "      <td>transfers</td>\n",
+       "      <td>0.379786</td>\n",
+       "      <td>scsi</td>\n",
+       "      <td>0.349866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1)    I have an old Jasmine drive which I cann...</td>\n",
+       "      <td>jasmine</td>\n",
+       "      <td>0.421156</td>\n",
+       "      <td>inexpensive</td>\n",
+       "      <td>0.329055</td>\n",
+       "      <td>drive</td>\n",
+       "      <td>0.291421</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -459,14 +491,18 @@
        "0  \\n\\nI am sure some bashers of Pens fans are pr...        pens   \n",
        "1  My brother is in the market for a high-perform...         pro   \n",
        "2  \\n\\n\\n\\n\\tFinally you said what you dream abou...  azerbadjan   \n",
+       "3  \\nThink!\\n\\nIt's the SCSI card doing the DMA t...         bus   \n",
+       "4  1)    I have an old Jasmine drive which I cann...     jasmine   \n",
        "\n",
-       "   importance_1   term_2  importance_2     term_3  importance_3  \n",
-       "0      0.548249     jagr      0.250491     devils      0.218444  \n",
-       "1      0.293923      bus      0.289536  farenheit      0.281321  \n",
-       "2      0.355673  weapons      0.279686  armenians      0.231632  "
+       "   importance_1       term_2  importance_2       term_3  importance_3  \n",
+       "0      0.548249         jagr      0.250491       devils      0.218444  \n",
+       "1      0.306293          bus      0.301722  performance      0.291752  \n",
+       "2      0.368957      weapons      0.290132    armenians      0.240284  \n",
+       "3      0.411414    transfers      0.379786         scsi      0.349866  \n",
+       "4      0.421156  inexpensive      0.329055        drive      0.291421  "
       ]
      },
-     "execution_count": 295,
+     "execution_count": 549,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,10 +517,150 @@
    "source": [
     "That is an even better way to gain insight into the semantics of each text. Let us look at our original example (the article about the sports match). In this case, the 3 most important terms are `pens`, `jagr` and `devils` - the names of the competing teams and the university to which the host belongs. This is a much better result than the one achieved by simple term frequency.\n",
     "\n",
-    "We can use the importance of the tokens from all texts in order to group them by semantics. This will allow us to see articles belonging to the same category or topic.\n",
-    "\n",
+    "We can use the importance of the tokens from all texts in order to group them by semantics. This will allow us to see articles belonging to the same category or topic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 550,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalizer = Normalizer()\n",
+    "# svd = TruncatedSVD(n_components=500)\n",
+    "# \n",
+    "# tfidf = svd.fit_transform(tfidf)\n",
+    "# tfidf = normalizer.fit_transform(tfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# K-Means Clustering\n",
     "We can use an unsupervised learning algorithm to automatically group texts by their meaning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 551,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import MiniBatchKMeans\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 552,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusterer = MiniBatchKMeans(n_clusters=len(news.target_names), init='k-means++', n_init=4, init_size=1000, batch_size=1000, verbose=False, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 553,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MiniBatchKMeans(batch_size=1000, compute_labels=True, init='k-means++',\n",
+       "        init_size=1000, max_iter=100, max_no_improvement=10, n_clusters=20,\n",
+       "        n_init=4, random_state=42, reassignment_ratio=0.01, tol=0.0,\n",
+       "        verbose=False)"
+      ]
+     },
+     "execution_count": 553,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clusterer.fit(tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 564,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homogeneity: 21.39%\n",
+      "Completeness: 30.60%\n",
+      "V-measure: 25.18%\n",
+      "Adjusted Rand-Index: 3.50%\n",
+      "Silhouette Coefficient: 0.74%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Homogeneity: {metrics.homogeneity_score(news.target, clusterer.labels_):.2%}')\n",
+    "print(f'Completeness: {metrics.completeness_score(news.target, clusterer.labels_):.2%}')\n",
+    "print(f'V-measure: {metrics.v_measure_score(news.target, clusterer.labels_):.2%}')\n",
+    "print(f'Adjusted Rand-Index: {metrics.adjusted_rand_score(news.target, clusterer.labels_):.2%}')\n",
+    "print(f'Silhouette Coefficient: {metrics.silhouette_score(tfidf, clusterer.labels_, sample_size=10000):.2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised Learning With Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 555,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03502581701324157"
+      ]
+     },
+     "execution_count": 555,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# metrics.f1_score(news.target, clusterer.predict(tfidf), average='weighted')"
    ]
   },
   {
@@ -521,6 +697,36 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 556,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# news_categories = pd.DataFrame(news.data, columns=['article'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 557,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# news_categories['actual'] = news.target\n",
+    "# news_categories['predicted'] = clusterer.predict(tfidf)\n",
+    "# news_categories['acrual_name'] = [news.target_names[category] for category in news_categories.actual]\n",
+    "# news_categories['predicted_name'] = [news.target_names[category] for category in news_categories.predicted]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 565,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# news_categories.head()"
+   ]
   },
   {
    "cell_type": "markdown",
